--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,7 @@
 
 <% if logged_in? %>
 	<p>Level: <%=current_user.level%></p>
-	<p>Total Score: <%=current_user.total_points%></p>
+	<p>Total Score: <%=current_user.total_days_points%></p>
 	<%= render partial: "gh_user_data" %>
 <% end %>
 <% if @scoreboard %>
