--- a/app/views/_header.html.erb
+++ b/app/views/_header.html.erb
@@ -20,6 +20,6 @@
   	<% end %> <!-- END IF ELSE -->
     <li class="RightPageNav">RightPage</li>
     <li class="LeftPageNav">LeftPage</li>
-    <li class="homeNav">Home</li>
+    <!-- <li class="homeNav">Home</li> -->
   </ul>
 </nav>
