Move charts into left-hand display

--- a/app/views/application/_score_commits.html.erb
+++ b/app/views/application/_score_commits.html.erb
@@ -1,7 +1,24 @@
 <% if logged_in? %>
 	<%= render partial: "gh_user_data" %>
+
+
+<!-- USER CHARTS -->
+
+
+
+<%= area_chart current_user.scoreboards.where({ "cohort" => @set_cohort }).group(:day).sum(:day_points) , width: "500px", height: "200px",colors: ["pink", "#999"] %>
+<h3>Your Daily Scores Over Time</h3>
+
+<!-- /USER CHARTS -->
+
+
+
   <p>Level: <%=current_user.level%></p>
   <p>Total Score: <%=current_user.total_days_points%></p>
 <% end %>
 <p>Score: <%=scoreboard.day_points%></p>
+<% unless current_user.scoreboards.size.zero? %>
+  <p>Average Commits Per Day: <%= (current_user.scoreboards.map(&:commits).reduce(:+)) / (current_user.scoreboards.size ) %></p>
+<% end %>
+
 <p>Commits: <%#scoreboard.commits%></p>
