--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -106,7 +106,7 @@ $purple: rgb(128,0,128);
 body{
  /* background:url(starry-night-sky.jpg);*/
   color:#7d8485;
-  height:1000px;
+  /*height:1000px;*/
   font-family: 'Roboto Condensed', sans-serif;
 }
 
@@ -167,7 +167,7 @@ nav.xheader  li.gitLi{
 
 .leftPage .backGroundFadeLeft{
 /*background-color: rgba(255,255,255,0.9);*/
-height:500px;
+/*height:500px;*/
 }
 .views.scoreboard.gh_user_data h1{
   color:white;
@@ -381,7 +381,14 @@ margin-top: 15px;
 /*---------Home Loged In END---------*/
 .home{
   background: url(xspace.gif);
-  background-size: cover;
+  /*background-size: cover;*/
+    /*background-attachment: fixed;*/
+    /*background-position: center;*/
+    background-repeat: no-repeat;
+    background-size: cover;
+    /*background: no-repeat;*/
+/*    height: 100%;
+    width:100;*/
   /*height: 500px;*/
 }
 .beforeSwipeLeft{
@@ -435,7 +442,7 @@ margin-top: 15px;
   /*height: 500px;*/
   width:100%;
   /*margin-left: 5%;*/
-  height:1000px;
+  /*height:1000px;*/
   /*margin-top: 10px;*/
   margin-right: -100%;
   transition: margin-right 0.5s;
