--- a/app/views/scoreboards/_scoreboard_challenges.html.erb
+++ b/app/views/scoreboards/_scoreboard_challenges.html.erb
@@ -4,11 +4,11 @@
 	<% @challenges.each do |challenge| %>
 	<h3><%= challenge.title %></h3>
 	<form action="/scoreboards/<%=@scoreboard.id%>/challenges/<%=challenge.id%>">
-		<input type="checkbox" class="release-checkbox"> Read Instructions<br>
+		<input type="button" value="Read Instructions"class="release-checkbox"> <br>
 		<% challenge.releases.times do |i| %>
-		<input type="checkbox" class="release-checkbox"> Release <%=i%><br>
+		<input type="button" value="Release <%=i%>" class="release-checkbox"> <br>
 		<% end %>
-		<input type="checkbox" class="release-checkbox"> Make Pull Request <br>
+		<input type="button" value="Make Pull Request" class="release-checkbox">  <br>
 	</form>
 	<% end %>
 </div>
