Hide inaccessible data

--- a/app/views/scoreboards/_gh_user_data.html.erb
+++ b/app/views/scoreboards/_gh_user_data.html.erb
@@ -5,8 +5,8 @@
 <div class="Breakline"></div>
   <div class="gitInfo">
     <ul>
-   	 	<li>Your email: <span><%= current_user.user_hash['extra']['raw_info']['email'] %></span></li>
-   	 	<li>Total private repos: <span><%=  current_user.user_hash['extra']['raw_info']['total_private_repos'] %></span></li>
+   	 	<!-- <li>Your email: <span><%= current_user.user_hash['extra']['raw_info']['email'] %></span></li>
+   	 	<li>Total private repos: <span><%=  current_user.user_hash['extra']['raw_info']['total_private_repos'] %></span></li> -->
    	 	<li>Total public repos: <span><%=  current_user.user_hash['extra']['raw_info']['public_repos'] %></span></li>
     <ul>
    </div>
