--- a/app/views/scoreboards/_scoreboard_challenges.html.erb
+++ b/app/views/scoreboards/_scoreboard_challenges.html.erb
@@ -5,11 +5,13 @@
 	<h2><%= challenge.title %></h2>
 	<div class="Breakline"></div>
 	<form action="/scoreboards/<%=@scoreboard.id%>/challenges/<%=challenge.id%>">
-		<input type="button" class="release-checkbox"> Read Instructions<br>
-		<% challenge.releases.times do |i| %>
-		<input type="button" class="release-checkbox"> Release <%=i%><br>
-		<% end %>
-		<input type="button" class="release-checkbox"> Make Pull Request <br>
+		<ul>
+			<li><input type="button" class="release-checkbox"> Read Instructions</li>
+			<% challenge.releases.times do |i| %>
+			<li><input type="button" class="release-checkbox"> Release <%=i%></li>
+			<% end %>
+			<li><input type="button" class="release-checkbox"> Make Pull Request</li>
+		</ul>
 	</form>
 	<% end %>
 </div>
