--- a/app/views/application/_ee_buttons.html.erb
+++ b/app/views/application/_ee_buttons.html.erb
@@ -1,3 +1,4 @@
+  <div class="eeButtons">
   <%= form_for @scoreboard, :html => {:class => "ee-btns"} do |f| %>
   	<%= f.submit "Get to campus on time" %>
   <% end %>
@@ -16,3 +17,4 @@
   <%= form_for @scoreboard, :html => {:class => "ee-btns"} do |f| %>
     <%= f.submit "Give ASK Feedback" %>
   <% end %>
+</div>
