--- a/app/views/application/_score_commits.html.erb
+++ b/app/views/application/_score_commits.html.erb
@@ -9,11 +9,12 @@
   <%#= area_chart current_user.scoreboards.where({ "cohort" => @set_cohort }).group(:day).sum(:day_points) , width: "300px", height: "120px",colors: ["#ff7885", "#999"] %>
 </div> -->
 <h3>Your Daily Scores Over Time</h3>
+<div class="Breakline"></div>
 
 <!-- /USER CHARTS -->
 
 
-
+<div class="scoreInfo">
   <p>Level: <%=current_user.level%></p>
   <p>Total Score: <%=current_user.total_days_points%></p>
 <% end %>
@@ -23,6 +24,8 @@
 <% end %>
 
 <p>Commits: <%#scoreboard.commits%></p>
-<div class="chart1">
-  <%= area_chart current_user.scoreboards.where({ "cohort" => @set_cohort }).group(:day).sum(:day_points) , width: "300px", height: "120px",colors: ["#ff7885", "#ffffff"] %>
-</div>
+
+  <div class="chart1">
+    <%= area_chart current_user.scoreboards.where({ "cohort" => @set_cohort }).group(:day).sum(:day_points) , width: "300px", height: "120px",colors: ["#ff7885", "#ffffff"] %>
+  </div>
+</div><!-- END scoreInfo -->
