--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,7 +7,9 @@
 		<%= render partial: "score_commits", locals: {scoreboard: @scoreboard} %>
 	</div>
 <%end%>
-
-<%= render partial: "ee_buttons" %>
-
 </div>
+<div class="eeWraper">
+<%= render partial: "ee_buttons" %>
+</div>
+
+
