--- a/app/views/scoreboards/new.html.erb
+++ b/app/views/scoreboards/new.html.erb
@@ -1,10 +1,12 @@
 <!-- views/scoreboards/new -->
 
 <!-- <article id="home" class="home"> -->
+
 <div class="startGamehome">
 
 <% if logged_in? %>
 	<h1>Start a New Game</h1>
+  <div class="Breakline"></div>
 	<%=render "form"%>
 <% else %>
 	<h1>Welcome to Let's Git It!</h1>
