Add minor changes

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 
 <div class="totalDayPoints">
-  <img src="<%= current_user.picture_url %>" alt="smiley face" height="150" width="150">
+  <img src="<%= @user.picture_url %>" alt="smiley face" height="150" width="150">
 <h1><%= @user.username %></h1>
 <div class="Breakline"></div>
 <ul>
