--- a/app/views/scoreboards/show.html.erb
+++ b/app/views/scoreboards/show.html.erb
@@ -1,25 +1,28 @@
-<!-- views/scoreboards/show -->
-<article id="home" class="home">
-<div class="views scoreboard show">
-<h1>Daily Scoreboard</h1>
-  <div class="Breakline"></div>
+<% if logged_in? %>
+  <!-- views/scoreboards/show -->
+  <article id="home" class="home">
+  <div class="views scoreboard show">
+  <h1>Daily Scoreboard</h1>
+    <div class="Breakline"></div>
 
-  <div class="dayPoints">
-    <ul>
-    <li>Day: <span><%=@scoreboard.day%></span></li>
-    <li>Week: <span><%=@scoreboard.week%></span></li>
-    <li>Phase: <span><%=@scoreboard.phase%></span></li>
-    <li>Today's Points: <span><%=@scoreboard.day_points%></span></li>
-    <li>Commits: <span><%=@scoreboard.commits%></span></li>
-    <% @challenges = @scoreboard.challenges %>
-    </ul>
+    <div class="dayPoints">
+      <ul>
+      <li>Day: <span><%=@scoreboard.day%></span></li>
+      <li>Week: <span><%=@scoreboard.week%></span></li>
+      <li>Phase: <span><%=@scoreboard.phase%></span></li>
+      <li>Today's Points: <span><%=@scoreboard.day_points%></span></li>
+      <li>Commits: <span><%=@scoreboard.commits%></span></li>
+      <% @challenges = @scoreboard.challenges %>
+      </ul>
+    </div>
   </div>
-</div>
-<!-- <div class="Breakline"></div> -->
-<% if @scoreboard.challenges %>
-	<%= render "scoreboard_challenges"%>
-<% end %>
+  <!-- <div class="Breakline"></div> -->
+  <% if @scoreboard.challenges %>
+  	<%= render "scoreboard_challenges"%>
+  <% end %>
 
-<%#= render "users/ee_buttons" %>
-	
-</article>
+  <%#= render "users/ee_buttons" %>
+
+  </article>
+
+<% end %>
