--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -54,5 +54,5 @@
 </article>
 
 <div class="downLoadNotes">
-<%= link_to "Download Notes", scoreboards_download_path, :"data-attribute" => "yeah!" %>
+<%= link_to "Download Notes",   "/scoreboards/#{@scoreboard.id}/download"%>
 </div>
