--- a/app/views/application/_score_commits.html.erb
+++ b/app/views/application/_score_commits.html.erb
@@ -1,30 +1,39 @@
 <% if logged_in? %>
-	<%= render partial: "gh_user_data" %>
+<%= render partial: "gh_user_data" %>
 
 
 <!-- USER CHARTS -->
 
 
 <!-- <div class="chart1">
-  <%#= area_chart current_user.scoreboards.where({ "cohort" => @set_cohort }).group(:day).sum(:day_points) , width: "300px", height: "120px",colors: ["#ff7885", "#999"] %>
+<%#= area_chart current_user.scoreboards.where({ "cohort" => @set_cohort }).group(:day).sum(:day_points) , width: "300px", height: "120px",colors: ["#ff7885", "#999"] %>
 </div> -->
 <h3>Your Daily Scores Over Time</h3>
 <div class="Breakline"></div>
 
 <!-- /USER CHARTS -->
 
-
 <div class="scoreInfo">
-  <p>Level: <%=current_user.level%></p>
-  <p>Total Score: <%=current_user.total_days_points%></p>
-<p>Score: <%=scoreboard.day_points%></p>
-  <p>Average Commits Per Day: <%= (current_user.scoreboards.map(&:commits).reduce(:+)) / (current_user.scoreboards.size ) %></p>
+	<p>Level: <%=current_user.level%></p>
+	<p>Total Score: <%=current_user.total_days_points%></p>
+	<p>Score: <%=scoreboard.day_points %></p>
+	<p>Average Commits Per Day: <%= (current_user.total_commits) / (current_user.scoreboards.size ) %></p>
 
-<p>Commits: <%#scoreboard.commits%></p>
+	<p>Commits: <%= current_user.total_commits%></p>
 
-  <div class="chart1">
-    <%= area_chart current_user.scoreboards.where({ "cohort" => @set_cohort }).group(:day).sum(:day_points) , width: "300px", height: "120px",colors: ["#ff7885", "#ffffff"] %>
-  </div>
+	<div class="chart A">
+
+	<p>	LEVEL: <%= current_user.level %></p>
+	<p>	EXP: <%= current_user.level_extra %></p>
+
+	<% data = [['Level', current_user.level_extra ]]%>
+	<%= bar_chart data, width: "300px", height: "60px", max: 100,colors: ["red", "#999"]%>
+	</div>
+
+
+	<div class="chart1">
+		<%= area_chart current_user.scoreboards.where({ "cohort" => @set_cohort }).group(:day).sum(:day_points) , width: "300px", height: "120px",colors: ["#ff7885", "#ffffff"] %>
+	</div>
 </div><!-- END scoreInfo -->
 
 <% end %>
