--- a/app/views/notes/new.html.erb
+++ b/app/views/notes/new.html.erb
@@ -1,4 +1,4 @@
-<% if logged_in? && @scoreboard.id%>
+<% if logged_in?%>
   <article class="xviews xnotes xnew">
     <div class="allNotes">
     <h1>Ah Ha</h1>
