--- a/app/views/scoreboards/new.html.erb
+++ b/app/views/scoreboards/new.html.erb
@@ -10,7 +10,7 @@
 	<%=render "form"%>
 <% else %>
 	<h1>Welcome to Let's Git It!</h1>
-	<p> Log in with Git Hub to start a new game.</p>
+	<%= render template: 'scoreboards/leaderboard' %>
 <% end %>
 </div>
 <!-- </article> -->
