Style leader board

--- a/app/views/_header.html.erb
+++ b/app/views/_header.html.erb
@@ -18,8 +18,8 @@
       </li>
       <% end %>
   	<% end %> <!-- END IF ELSE -->
-    <li class="RightPageNav">RightPage</li>
-    <li class="LeftPageNav">LeftPage</li>
+    <li class="RightPageNav">Right</li>
+    <li class="LeftPageNav">Left</li>
     <!-- <li class="homeNav">Home</li> -->
   </ul>
 </nav>
