--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -501,18 +501,6 @@ margin-bottom: 30px;
 }
 /*---------Home Loged In END---------*/
 
-
-
-
-
-
-
-
-
-
-
-
-
 /*-------Home start New Game-------*/
 .startGamehome{
   height:1000px;
@@ -593,6 +581,85 @@ background-color: rgba(255,255,255,0.1);
 
 }
 /*-------Home start New Game END-------*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*----------LeaderBoard----------*/
+.leaderBoard{
+  color:white;
+  font-weight: 300;
+  /*border:1px red solid;*/
+  text-align: center;
+  /*background-color:rgba(255,255,255,0.2);*/
+
+    a{
+      color: white;
+    }
+
+    td.words{
+      /*border:1px solid white;*/
+      font-size: 2em;
+    }
+    td.words{
+      padding-right: 20px;
+      padding-left: 20px;
+      padding-top: -30px;
+    }
+    table{
+      /*border:red 1px solid;*/
+      margin:0 auto;
+      padding:20px;
+
+    }
+    h1{
+
+    }
+    .firstH1{
+      margin-bottom: 25px;
+      font-size: 2.7em;
+    }
+    th{
+      font-size: 2em;
+    /*  border-bottom: 1px solid white;*/
+    }
+}
+
+
+@media only screen and (max-width: 713px) {
+  .leaderBoard{
+    td.words{
+      font-size: 1.5em;
+    }
+    th{
+    font-size: 1.5em;
+    }
+  }
+}
+
+/*450px*/
+@media only screen and (max-width: 450px) {
+  .leaderBoard{
+    td img{
+      display:none;
+    }
+  }
+}
+
+
+/*----------LeaderBoard END----------*/
+
+
+
 
 
 
